# st-copy-to-clipboard

./: .cruft.json  .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish_PYPI_each_tag.yml
st_copy_to_clipboard/: __init__.py
st_copy_to_clipboard/frontend/: index.html  main.js  style.css
