[tool.poetry]
name = "st-copy-to-clipboard"
version = "0.1.6"
description = ""
authors = ["mmz-001 <mmzappdev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cruft = "^2.15.0"
streamlit = "^1.28.0"
twine = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
